--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -60,6 +60,7 @@ h2 {
 h3 {
   font-size: $base-heading-size * 0.8;
   color: $orange;
+  margin: 0 0 $tiny-spacing 0;
 }
 
 h4 {
